--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>JSON Data Rendering</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<style>
+    body {background-color: powderblue;}
+    h1 {color: blue;}
+</style>
 <body>
     <h1>Render JSON Data</h1>
     <div id="output"></div>
