--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <style>
-    body {background-color: powderblue;}
-    h1 {color: blue;}
+    body {background-color: black;}
+    body {color: forestgreen;}
+    h1 {color: forestgreen;}
 </style>
 <body>
     <h1>Render JSON Data</h1>
