--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JSON Data Rendering</title>
+    <title>Throwback Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <style>
     body {background-color: black;}
-    body {color: forestgreen;}
-    h1 {color: forestgreen;}
+    body {color: lawngreen;}
+    h1 {color: lawngreen;}
+    .p1 {
+  font-family: "Courier New", monospace
+}
 </style>
 <body>
     <h1>Render JSON Data</h1>
