--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {background-color: black;}
     body {color: lawngreen;}
     h1 {color: lawngreen;}
-    .p1 {
+    body {
   font-family: "Courier New", monospace
 }
 </style>
