--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 }
 </style>
 <body>
-    <h1>Render JSON Data</h1>
+    <h1>Throwback Page</h1>
     <div id="output"></div>
    <script src="mustache.js"></script>
    <script src="script.js"></script>
