--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <style>
     body {background-color: black;}
-    body {color: lawngreen;}
-    h1 {color: lawngreen;}
+    body {color: lime;}
+    h1 {color: lime;}
     body {
   font-family: "Courier New", monospace
 }
